--- a/app/views/company/calendars/index.html.erb
+++ b/app/views/company/calendars/index.html.erb
@@ -5,12 +5,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark"><%= t('common.calendar') %></h1>
+        <h1 class="m-0 text-dark"><%= t('common.calendar_regist') %></h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item"><a href="<%= homes_path %>"><%= t('common.home') %></a></li>
-          <li class="breadcrumb-item active"><%= t('common.calendar') %></li>
+          <li class="breadcrumb-item active"><%= t('common.calendar_regist') %></li>
         </ol>
       </div>
     </div>
