--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -99,7 +99,7 @@
 
           <div class="col-md-3 mb-2">
             <div class="input-group">
-              <%= f.submit '検　索', class: 'btn btn-success rounded-pill', data: { disable_with: t('.searting') } %>
+              <%= f.submit t('common.search'), class: 'btn btn-success rounded-pill', data: { disable_with: t('.searting') } %>
               <a href="javascript: void(0)" id="clear_button" class="ml-2 btn btn-outline-primary rounded-pill"><%= t('.clear') %></a>
               <%= javascript_tag do %>
                 $(function() {
@@ -233,6 +233,8 @@
                   <% if @company.is_inviting_feature? %>
                     <th><%= Customer.human_attribute_name(:introducer) %></th>
                   <% end %>
+
+                  <th>操作</th>
                 </tr>
               </thead>
 
@@ -246,7 +248,13 @@
                           <i class="fab fa-line fa-2x text-warning"></i>
                         </a>
                       <% else %>
-                        <a href="<%= new_line_message_customer_path(@company.code, customer) %>"><i class="fab fa-line fa-2x text-success"></i></a>
+                        <a href="<%= new_line_message_customer_path(@company.code, customer) %>">
+                          <% if customer.user.image.present? %>
+                            <img src="<%= customer.user.base64_image(:thumb_50) %>" style="max-height: 33px;border-radius: 50%;" />
+                          <% else %>
+                            <i class="fab fa-line fa-2x text-success"></i>
+                          <% end %>
+                        </a>
                       <% end %>
                     <% end %>
                   </td>
@@ -270,12 +278,22 @@
                   <% if @company.is_input_customer_birthday? %>
                     <td class="align-middle"><%= customer.age %></td>
                   <% end %>
+
                   <td class="align-middle"><%= customer.last_vist_date %></td>
+
                   <% if @company.is_inviting_feature? %>
                     <td class="align-middle">
                       <%= link_to customer.introducer.name.to_s, customer_path(@company.code, customer.introducer), { class: 'text-info' } if customer.introducer %>
                     </td>
                   <% end %>
+
+                  <td>
+                    <% if customer.line? %>
+                      <%= form_with(url: reset_line_info_customer_path(@company.code, customer.id), method: :post, local: false) do |f| %>
+                        <%= f.submit 'LINE情報更新', class: 'btn btn-sm btn-success rounded-pill', data: { disable_with: t('.updating') } %>
+                      <% end %>
+                    <% end %>
+                  </td>
                 </tr>
               <% end %>
 
