--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,6 +34,11 @@
 
     <div class="card-footer clearfix">
       <a href="<%= edit_user_path(@company.code, @user) %>" class="btn btn-info float-left mr-2"><%= t('.edit_link') %></a>
+      <% if @user.line_user_id.present? %>
+        <%= form_with(url: reset_line_info_user_path(@company.code, @user), method: :post, local: false) do |f| %>
+          <%= f.submit 'LINE情報更新', class: 'btn btn-success', data: { disable_with: t('.updating') } %>
+        <% end %>
+      <% end %>
       <a href="<%= homes_path %>" class="btn btn-default float-right"><%= t('.return_link') %></a>
     </div>
   </div>
