--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -99,7 +99,7 @@
 
           <div class="col-md-3 mb-2">
             <div class="input-group">
-              <%= f.submit t('common.search'), class: 'btn btn-success rounded-pill', data: { disable_with: t('.searting') } %>
+              <%= f.submit t('common.search'), class: 'btn btn-success rounded-pill', data: { disable_with: t('common.in_search') } %>
               <a href="javascript: void(0)" id="clear_button" class="ml-2 btn btn-outline-primary rounded-pill"><%= t('.clear') %></a>
               <%= javascript_tag do %>
                 $(function() {
