--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -118,71 +118,73 @@
   </div>
 
   <div class="row">
-    <div class="col-md-3">
+    <% if @company.is_for_profit? %>
+      <div class="col-md-3">
 
-      <div class="card">
-        <div class="card-header" data-card-widget="collapse">
-          <h3 class="card-title"><%= t('.age') %></h3>
+        <div class="card">
+          <div class="card-header" data-card-widget="collapse">
+            <h3 class="card-title"><%= t('.age') %></h3>
 
-          <div class="card-tools">
-            <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
-            </button>
+            <div class="card-tools">
+              <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="card-body p-0" style="display: block;">
+            <ul class="nav nav-pills flex-column">
+              <li class="nav-item">
+                <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="" data-age_to="19">
+                  <%= t('.under_19') %>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="20" data-age_to="29">
+                  <%= t('.under_29') %>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="30" data-age_to="39">
+                  <%= t('.under_39') %>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="40" data-age_to="49">
+                  <%= t('.under_49') %>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="50" data-age_to="59">
+                  <%= t('.under_59') %>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="60" data-age_to="69">
+                  <%= t('.under_69') %>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="70" data-age_to="">
+                  <%= t('.more_70') %>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
 
-        <div class="card-body p-0" style="display: block;">
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="" data-age_to="19">
-                <%= t('.under_19') %>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="20" data-age_to="29">
-                <%= t('.under_29') %>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="30" data-age_to="39">
-                <%= t('.under_39') %>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="40" data-age_to="49">
-                <%= t('.under_49') %>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="50" data-age_to="59">
-                <%= t('.under_59') %>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="60" data-age_to="69">
-                <%= t('.under_69') %>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="javascript: void(0)" class="nav-link simple_age" data-age_from="70" data-age_to="">
-                <%= t('.more_70') %>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <%= javascript_tag do %>
-        $(function() {
-          $('.simple_age').on('click', function(){
-            $('#searchAgeFromText').val($(this).data('age_from'));
-            $('#searchAgeToText').val($(this).data('age_to'));
-            $('#search_form').submit();
+        <%= javascript_tag do %>
+          $(function() {
+            $('.simple_age').on('click', function(){
+              $('#searchAgeFromText').val($(this).data('age_from'));
+              $('#searchAgeToText').val($(this).data('age_to'));
+              $('#search_form').submit();
+            });
           });
-        });
-      <% end %>
-    </div>
+        <% end %>
+      </div>
+    <% end %>
 
-    <div class="col-md-9">
+    <div class="col-md-<%= @company.is_for_profit? ? '9' : '12' %>">
       <div class="card card-primary card-outline">
         <div class="card-header">
           <% page = params[:page].present? ? params[:page].to_i : 1 %>
