--- a/app/views/customers/line_message/_user.html.erb
+++ b/app/views/customers/line_message/_user.html.erb
@@ -1,6 +1,6 @@
 <div class="direct-chat-msg">
   <div class="direct-chat-infos clearfix">
-    <span class="direct-chat-name float-left"><%= customer.name %>&nbsp;</span>
+    <span class="direct-chat-name float-left"><%= message.try(:user).try(:name).to_s %>&nbsp;</span>
     <span class="direct-chat-timestamp float-left"><%= message.created_at.strftime("%Y/%m/%d %H:%M") %></span>
   </div>
 
