--- a/app/views/public/homes/index_for_system.html.erb
+++ b/app/views/public/homes/index_for_system.html.erb
@@ -6,7 +6,7 @@
       <div class="col-12 col-sm-6 col-md-3">
         <div class="info-box mb-3">
           <span class="info-box-icon bg-info elevation-1">
-            <a href="<%= customers_path(params[:company_code]) %>"><i class="fas fa-users"></i></a>
+            <a href="<%= customers_path %>"><i class="fas fa-users"></i></a>
           </span>
 
           <div class="info-box-content">
@@ -18,7 +18,9 @@
 
       <div class="col-12 col-sm-6 col-md-3">
         <div class="info-box">
-          <span class="info-box-icon bg-warning elevation-1"><i class="fas fa-cog"></i></span>
+          <span class="info-box-icon bg-warning elevation-1">
+            <a href="<%= recent_message_index_customers_path %>"><i class="fas fa-cog"></i></a>
+          </span>
 
           <div class="info-box-content">
             <span class="info-box-text"><%= t('.line_notify') %></span>
