--- a/app/views/layouts/customer/_header.html.erb
+++ b/app/views/layouts/customer/_header.html.erb
@@ -7,7 +7,7 @@
     <li class="nav-item d-none d-sm-inline-block">
       <a href="<%= homes_path %>" class="nav-link"><%= t('common.home') %></a>
     </li>
-    <% if @company.try(:is_calendar_feature?) && can?(:calendar, :home) %>
+    <% if can?(:calendar, :home) %>
       <li class="nav-item d-none d-sm-inline-block">
         <a href="<%= calendar_homes_path %>" class="nav-link"><%= t('common.calendar_event_list') %></a>
       </li>
