--- a/app/views/public/homes/index_for_customer_user.html.erb
+++ b/app/views/public/homes/index_for_customer_user.html.erb
@@ -8,14 +8,16 @@
               <a href="<%= calendar_homes_path(params[:company_code]) %>"><i class="fas fa-calendar-alt"></i></a>
             </span>
 
-            <div class="info-box-content">
-              <span class="info-box-text"><%= t('common.calendar_event_list') %></span>
-              <%
-                prev_month = (DateTime.now - 1.month).at_end_of_month
-                event_count = @calendar_events.select{ |c| c.start > prev_month }.size()
-              %>
-              <span class="info-box-number"><%= event_count %><small>件</small></span>
-            </div>
+            <% if can?(:calendar, :home) %>
+              <div class="info-box-content">
+                <span class="info-box-text"><%= t('common.calendar_event_list') %></span>
+                <%
+                  prev_month = (DateTime.now - 1.month).at_end_of_month
+                  event_count = @calendar_events.select{ |c| c.start > prev_month }.size()
+                %>
+                <span class="info-box-number"><%= event_count %><small>件</small></span>
+              </div>
+            <% end %>
           </div>
         </div>
       <% end %>
