--- a/app/views/layouts/_main_footer.html.erb
+++ b/app/views/layouts/_main_footer.html.erb
@@ -3,5 +3,5 @@
   <div class="float-right d-none d-sm-inline">
   </div>
 
-  <%= t('.copyright_html') %>
+  <%= t('.copyright_html') if @company.is_for_profit? %>
 </footer>
